move to openapi codegen for RCv2 API
Signed-off-by: Paolo Dettori <dettori@us.ibm.com>

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ cover.out
 # ignore IDE folders
 .vscode/
 .DS_Store
+
+# ignore OpenAPI generator files
+.openapi-generator-ignore
+.openapi-generator/
