--- a/examples/composition/composition.yaml
+++ b/examples/composition/composition.yaml
@@ -1,4 +1,4 @@
-apiVersion: apiextensions.crossplane.io/v1alpha1
+apiVersion: apiextensions.crossplane.io/v1
 kind: Composition
 metadata:
   name: example-ibm-cloud
