change to free plan for es
Signed-off-by: Paolo Dettori <dettori@us.ibm.com>

--- a/examples/resourcecontrollerv2/resource-instance-eventstreams.yaml
+++ b/examples/resourcecontrollerv2/resource-instance-eventstreams.yaml
@@ -8,7 +8,7 @@ spec:
     target: us-south
     resourceGroupName: default
     serviceName: messagehub
-    resourcePlanName: standard
+    resourcePlanName: lite
     tags:
       - dev
   providerConfigRef:
