add categories to CRDs for passing conformance testing
Signed-off-by: Paolo Dettori <dettori@us.ibm.com>

--- a/package/crds/iamaccessgroupsv2.ibmcloud.crossplane.io_accessgroups.yaml
+++ b/package/crds/iamaccessgroupsv2.ibmcloud.crossplane.io_accessgroups.yaml
@@ -8,6 +8,10 @@ metadata:
 spec:
   group: iamaccessgroupsv2.ibmcloud.crossplane.io
   names:
+    categories:
+    - crossplane
+    - managed
+    - ibmcloud
     kind: AccessGroup
     listKind: AccessGroupList
     plural: accessgroups
