--- a/package/crds/ibmclouddatabasesv5.ibmcloud.crossplane.io_autoscalinggroups.yaml
+++ b/package/crds/ibmclouddatabasesv5.ibmcloud.crossplane.io_autoscalinggroups.yaml
@@ -8,6 +8,10 @@ metadata:
 spec:
   group: ibmclouddatabasesv5.ibmcloud.crossplane.io
   names:
+    categories:
+    - crossplane
+    - managed
+    - ibmcloud
     kind: AutoscalingGroup
     listKind: AutoscalingGroupList
     plural: autoscalinggroups
