--- a/package/crds/iamaccessgroupsv2.ibmcloud.crossplane.io_accessgrouprules.yaml
+++ b/package/crds/iamaccessgroupsv2.ibmcloud.crossplane.io_accessgrouprules.yaml
@@ -8,6 +8,10 @@ metadata:
 spec:
   group: iamaccessgroupsv2.ibmcloud.crossplane.io
   names:
+    categories:
+    - crossplane
+    - managed
+    - ibmcloud
     kind: AccessGroupRule
     listKind: AccessGroupRuleList
     plural: accessgrouprules
