--- a/package/crds/iamaccessgroupsv2.ibmcloud.crossplane.io_groupmemberships.yaml
+++ b/package/crds/iamaccessgroupsv2.ibmcloud.crossplane.io_groupmemberships.yaml
@@ -8,6 +8,10 @@ metadata:
 spec:
   group: iamaccessgroupsv2.ibmcloud.crossplane.io
   names:
+    categories:
+    - crossplane
+    - managed
+    - ibmcloud
     kind: GroupMembership
     listKind: GroupMembershipList
     plural: groupmemberships
