--- a/package/crds/ibmclouddatabasesv5.ibmcloud.crossplane.io_whitelists.yaml
+++ b/package/crds/ibmclouddatabasesv5.ibmcloud.crossplane.io_whitelists.yaml
@@ -8,6 +8,10 @@ metadata:
 spec:
   group: ibmclouddatabasesv5.ibmcloud.crossplane.io
   names:
+    categories:
+    - crossplane
+    - managed
+    - ibmcloud
     kind: Whitelist
     listKind: WhitelistList
     plural: whitelists
