--- a/package/crds/resourcecontrollerv2.ibmcloud.crossplane.io_resourceinstances.yaml
+++ b/package/crds/resourcecontrollerv2.ibmcloud.crossplane.io_resourceinstances.yaml
@@ -8,6 +8,10 @@ metadata:
 spec:
   group: resourcecontrollerv2.ibmcloud.crossplane.io
   names:
+    categories:
+    - crossplane
+    - managed
+    - ibmcloud
     kind: ResourceInstance
     listKind: ResourceInstanceList
     plural: resourceinstances
