--- a/package/crds/resourcecontrollerv2.ibmcloud.crossplane.io_resourcekeys.yaml
+++ b/package/crds/resourcecontrollerv2.ibmcloud.crossplane.io_resourcekeys.yaml
@@ -8,6 +8,10 @@ metadata:
 spec:
   group: resourcecontrollerv2.ibmcloud.crossplane.io
   names:
+    categories:
+    - crossplane
+    - managed
+    - ibmcloud
     kind: ResourceKey
     listKind: ResourceKeyList
     plural: resourcekeys
